# 5G-Networked-Drone

./: LICENSE  README.md  client.c  main1.cpp  main2.cpp  main3.cpp  mainfinal1.cpp  ve450final.cpp  ve450final.hpp
Onboard Part/: CMakeLists.txt  UserConfig.txt  ve450  ve450.sh
Onboard Part/VE450/: CMakeLists.txt  VE450.cpp  VE450.hpp  main.cpp
